Fix bug available

--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -106,7 +106,7 @@
 <!-- <script id="new-ticket-template" type="x-tmpl-mustache">
   <tr class="ticket new-ticket">
     <td><input class="form-control" type="text" name="new_ticket_titles[]" value="" placeholder="eg. General, VIP" /></td>
-    <td><input class="form-control" type="number" name="new_ticket_availables[]" value="" /></td>
+    <td><input class="form-control" type="number" name="new_ticket_totals[]" value="" /></td>
     <td><input class="form-control" type="number" name="new_ticket_prices[]" value="" /></td>
     <td width="200">
       <div class="input-group datepicker">
