--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -92,7 +92,7 @@
               <% @sections.each do |section| %>
               <tr class="ticket" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
                 <td><input class="form-control" type="text" name="ticket[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
-                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][available]" value="<%= section.available %>" /></td>
+                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][total]" value="<%= section.total %>" /></td>
                 <td><input class="form-control" type="number" name="ticket[<%= section.id %>][price]" value="<%= section.price %>" /></td>
                 <td width="200">
                   <div class="input-group datepicker">
@@ -151,7 +151,7 @@
 <!-- <script id="new-ticket-template" type="x-tmpl-mustache">
   <tr class="ticket new-ticket">
     <td><input class="form-control" type="text" name="new_ticket_names[]" value="" placeholder="eg. General, VIP" /></td>
-    <td><input class="form-control" type="number" name="new_ticket_availables[]" value="" /></td>
+    <td><input class="form-control" type="number" name="new_ticket_totals[]" value="" /></td>
     <td><input class="form-control" type="number" name="new_ticket_prices[]" value="" /></td>
     <td width="200">
       <div class="input-group datepicker">
