--- a/app/views/greetings/campaign_terms.html.erb
+++ b/app/views/greetings/campaign_terms.html.erb
@@ -34,8 +34,8 @@
           <div class="container">
             <h2>เงื่อนไขการร่วมกิจกรรม “Dash Your Day” ได้เวลาเติมประสบการณ์ใหม่ๆ ให้ชีวิต โดย Daydash.co</h2>
             <ul>
-              <li>เปิดให้ร่วมสนุกตั้งแต่วันที่ 19 - 31 สิงหาคม 2016 </li>
-              <li>หมดเวลาเข้าร่วมสนุกเวลา 24.00 น. ของวันที่ 31 สิงหาคม 2016 ตามเวลาในประเทศไทย</li>
+              <li>เปิดให้ร่วมสนุกตั้งแต่วันที่ 19 - 7 กันยายน 2016 </li>
+              <li>หมดเวลาเข้าร่วมสนุกเวลา 24.00 น. ของวันที่ 7 กันยายน 2016 ตามเวลาในประเทศไทย</li>
               <li>ประกาศผลรางวัลในวันที่ 5 กันยายน 2016 ทาง <a href="https://www.facebook.com/daydashapp/" target="_blank">Daydash Facebook Page</a></li>
             </ul>
 
