--- a/app/views/layouts/greetings.html.erb
+++ b/app/views/layouts/greetings.html.erb
@@ -23,6 +23,8 @@
         padding-left: 20px;
       }
     </style>
+
+    <%= render partial: "layouts/parts/tracking.html.erb" %>
   </head>
   <body>
     <%= yield %>
