--- a/app/views/layouts/greetings.html.erb
+++ b/app/views/layouts/greetings.html.erb
@@ -13,6 +13,9 @@
     <style media="screen">
       body {
         font-family: Sans-Serif;
+        font-size: 16px;
+        line-height: 1.7;
+        letter-spacing: 0.01em;
       }
       h1, h2 {
         font-size: 14px;
@@ -22,6 +25,8 @@
       ul {
         padding-left: 20px;
       }
+
+
     </style>
 
     <%= render partial: "layouts/parts/tracking.html.erb" %>
