--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -11,7 +11,7 @@
       <div class="col-xs-12">
         <div class="ticket-list">
           <div class="list-body">
-            <% @tickets.each do |ticket| %>
+            <% @tickets_active.each do |ticket| %>
               <div class="ticket ticket-1">
                 <div class="row">
                   <div class="col-xs-12 col-md-3">
@@ -61,28 +61,63 @@
                     </a>
                   </div>
                 </div>
-                <!--
-                <a class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);" href="#"></a>
-                <div class="info">
-                  <div class="info-body">
-                    <h4 class="title">
-                      <%#= link_to client_profile_ticket_path(current_user.id, ticket.id) do %>
-                        <%= ticket.event.title %>
-                      <%# end %>
-                    </h4>
-                    <div class="meta date"><%= ticket.section.to_event_human %></div>
-                    <div class="meta location"><%= ticket.event.location_name %></div>
+              </div>
+            <% end %>
+
+            <% if @has_tickets_passed %>
+              <!-- ....................... PAST EVENT ....................... -->
+            <% end  %>
+
+            <% @tickets_passed.each do |ticket| %>
+              <div class="ticket ticket-1">
+                <div class="row">
+                  <div class="col-xs-12 col-md-3">
+                    <div class="event-date-lg">
+                      <div class="month"><%= ticket.section.event_time.try(:strftime, "%b") %></div>
+                      <div class="date"><%= ticket.section.event_time.try(:strftime, "%d") %></div>
+                    </div>
                   </div>
-                  <div class="info-footer">
-                    <div class="row">
-                      <div class="col-xs-12 col-md-7">
-                        <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%#= ticket.payment.purchased_status %></span>
+                  <div class="col-xs-12 col-md-6">
+                    <div class="info">
+                      <div class="info-body">
+                        <h4 class="title">
+                          <%#= link_to client_profile_ticket_path(current_user.id, ticket.id) do %>
+                            <a href="<%= client_event_path(ticket.event.id) %>"><%= ticket.event.title %></a>
+                          <%# end %>
+                        </h4>
+
+                        <div class="row">
+                          <div class="col-xs-6">
+                            <div>
+                              <span class="ticket-type"><%= ticket.section.title %></span>
+                              <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
+                            </div>
+                          </div>
+                          <div class="col-xs-6">
+                            <div class="ticket-code">
+                              <label>TICKET ID:</label>
+                              <%= ticket.code %>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="info-footer">
+                        <div class="row">
+                          <div class="col-xs-12 col-md-7">
+                            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= ticket.section.to_event_human %></div>
+                            <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= ticket.event.location_name %></div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <div class="col-xs-12 col-md-3">
+                    <a class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);" href="<%= client_event_path(ticket.event.id) %>">
+                      <!--img src="<%= ticket.qr_code(:medium) %>" width="100%" /-->
+                      <img src="/src/images/mockup/ticket-qr.png" width="100%" />
+                    </a>
+                  </div>
                 </div>
-                -->
               </div>
             <% end %>
           </div>
