--- a/app/views/payment_mailer/order.html.erb
+++ b/app/views/payment_mailer/order.html.erb
@@ -232,7 +232,7 @@
                     <table width="100%">
                       <tr>
                         <td align="center" style="color: red;">
-                          <strong>*** กรุณาทำการชำระเงินภายใน 3 ชั่วโมง นับจากการสั่งซื้อ ***</strong><br />
+                          <strong>*** กรุณาทำการชำระเงินภายใน 60 นาที นับจากการสั่งซื้อ ***</strong><br />
                           (ชำระภายใน วันที่ 25 กันยายน 2016 เวลา 11:03 PM)
                         </td>
                       </tr>
