--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -37,7 +37,7 @@
                         </tr>
                         <tr>
                           <td>วิธีการชำระเงิน</td>
-                          <td><%= order.payment.methods %></td>
+                          <td><%= order.payment.channel %></td>
                         </tr>
                         <tr>
                           <td>สถานะการชำระเงิน</td>
