--- a/app/views/layouts/greetings.html.erb
+++ b/app/views/layouts/greetings.html.erb
@@ -29,7 +29,7 @@
 
     </style>
 
-    <%= render partial: "layouts/parts/tracking.html.erb" %>
+    <%= render partial: "layouts/parts/tracking" %>
   </head>
   <body>
     <%= yield %>
