--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -22,11 +22,11 @@
         <%= link_to 'ALL', 'javascript:;', class: 'category-filter' %>
         <!-- <a href="#" onclick="return"></a> -->
       </li>
-      <% @categories.each do |category| %>
+      <% @global_categories.each do |category| %>
         <li>
           <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
         </li>
-      <% end if @categories.present? %>
+      <% end %>
     </ul>
     <div class="row event-list">
       <% @events.each do |event| %>
