--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -1,133 +1,145 @@
 <script>$('body').attr('id', 'organizer-events-edit');</script>
+<%= render partial: "organizer/parts/organizer-nav" %>
+<script>$('#organizer-nav #menu-event-list').addClass('active');</script>
+
 <div class="section">
   <div class="container">
-    <%= render partial: "organizer/parts/organizer-nav" %>
-    <script>$('#organizer-nav #menu-event-list').addClass('active');</script>
+    <div class="section-header row">
+      <div class="col-xs-12">
+        <h1 class="event-title"><%= @event.title %></h1>
+      </div>
+    </div>
+    <div class="section-body row">
+      <div class="col-xs-12 col-md-2">
+        <%= render partial: "organizer/parts/organizer-event-nav" %>
+      </div>
+      <div class="col-xs-12 col-md-10">
+        <%= form_tag organizer_event_path(@event), multipart: true, method: :put  do %>
+          <input type="hidden" name="images_order" value="<%= @images_order.join(',') %>" />
+          <input type="hidden" name="images_delete[]" value="" />
 
-    <%= form_tag organizer_event_path(@event), multipart: true, method: :put  do %>
-      <input type="hidden" name="images_order" value="<%= @images_order.join(',') %>" />
-      <input type="hidden" name="images_delete[]" value="" />
+          <input type="hidden" name="sections_delete[]" value="" />
 
-      <input type="hidden" name="sections_delete[]" value="" />
-
-      <div class="form-section">
-        <div class="form-header">
-          <h1 class="form-title">1. Event Detail</h1>
-        </div>
-        <div class="form-body row">
-          <div class="col-xs-12 col-md-6">
-            <div class="form-group">
-              <label>Event Title</label>
-              <input class="form-control" name="title" value="<%= @event.title %>" />
+          <div class="form-section">
+            <div class="form-header">
+              <h1 class="form-title">1. Event Detail</h1>
             </div>
-            <div class="form-group">
-              <label>Category</label>
-              <div class="category-list row">
-                <% @categories.each do |category| %>
-                <div class="col-xs-12 col-md-6">
-                  <label class="category">
-                    <input type="checkbox" name="category_ids[]" value="<%= category.id %>" <% if @event.categories.where(:id => category.id).exists? %>checked<% end %> />
-                    <%= category.title %>
-                  </label>
+            <div class="form-body row">
+              <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                  <label>Event Title</label>
+                  <input class="form-control" name="title" value="<%= @event.title %>" />
                 </div>
-                <% end %>
+                <div class="form-group">
+                  <label>Category</label>
+                  <div class="category-list row">
+                    <% @categories.each do |category| %>
+                    <div class="col-xs-12 col-md-6">
+                      <label class="category">
+                        <input type="checkbox" name="category_ids[]" value="<%= category.id %>" <% if @event.categories.where(:id => category.id).exists? %>checked<% end %> />
+                        <%= category.title %>
+                      </label>
+                    </div>
+                    <% end %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label>Description</label>
+                  <textarea class="form-control" name="description" rows="10"><%= @event.description %></textarea>
+                </div>
+                <div class="form-group">
+                  <label>Name</label>
+                  <input class="form-control" name="location_name" value="<%= @event.location_name %>" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
+                </div>
+                <div class="form-group">
+                  <label>Address</label>
+                  <input class="form-control" name="location_address" value="<%= @event.location_address %>" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
+                </div>
+                <div class="form-group">
+                  <label>Location on Map</label>
+                  <div class="form-inline">
+                    <input class="form-control" type="text" name="latitude" id="event_latitude" value="<%= @event.latitude %>" placeholder="Latitude" />
+                    <input class="form-control" type="text" name="longitude" id="event_longitude" value="<%= @event.longitude %>" placeholder="Longitude" />
+                  </div>
+                  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                  <div id="map" style="margin-top: 15px; height: 300px;"></div>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label>Description</label>
-              <textarea class="form-control" name="description" rows="10"><%= @event.description %></textarea>
-            </div>
-            <div class="form-group">
-              <label>Name</label>
-              <input class="form-control" name="location_name" value="<%= @event.location_name %>" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
-            </div>
-            <div class="form-group">
-              <label>Address</label>
-              <input class="form-control" name="location_address" value="<%= @event.location_address %>" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
-            </div>
-            <div class="form-group">
-              <label>Location on Map</label>
-              <div class="form-inline">
-                <input class="form-control" type="text" name="latitude" id="event_latitude" value="<%= @event.latitude %>" placeholder="Latitude" />
-                <input class="form-control" type="text" name="longitude" id="event_longitude" value="<%= @event.longitude %>" placeholder="Longitude" />
+              <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                  <label>Images</label>
+                  <input class="form-control" type="file" name="event_pictures[]" multiple />
+                </div>
+                <div class="image-list sortable row">
+                  <% @images.each do |image| %>
+                  <div class="col-xs-6" data-id="<%= image.sort_index %>">
+                    <div class="image" style="background-image: url(<%= image.media(:thumb) %>);"></div>
+                  </div>
+                  <% end %>
+                </div>
               </div>
-              <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-              <div id="map" style="margin-top: 15px; height: 300px;"></div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="form-group">
-              <label>Images</label>
-              <input class="form-control" type="file" name="event_pictures[]" multiple />
+
+          <div class="form-section">
+            <div class="form-header">
+              <h1 class="form-title">2. Ticket Detail</h1>
             </div>
-            <div class="image-list sortable row">
-              <% @images.each do |image| %>
-              <div class="col-xs-6" data-id="<%= image.sort_index %>">
-                <div class="image" style="background-image: url(<%= image.media(:thumb) %>);"></div>
-              </div>
-              <% end %>
+            <div class="form-body">
+              <table class="table table-hover ticket-list">
+                <thead>
+                  <tr>
+                    <td>Ticket Title</td>
+                    <td>Ticket Available</td>
+                    <td>Ticket Price</td>
+                    <td>Date</td>
+                    <td>From</td>
+                    <td>To</td>
+                    <td><!-- Action --></td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @sections.each do |section| %>
+                  <tr class="ticket" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
+                    <td><input class="form-control" type="text" name="ticket[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
+                    <td><input class="form-control" type="number" name="ticket[<%= section.id %>][total]" value="<%= section.total %>" /></td>
+                    <td><input class="form-control" type="number" name="ticket[<%= section.id %>][price]" value="<%= section.price %>" /></td>
+                    <td width="200">
+                      <div class="input-group datepicker">
+                        <input type="text" class="form-control" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time.strftime("%d/%m/%Y")  %>" />
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                      </div>
+                    </td>
+                    <td width="200">
+                      <div class="input-group timepicker">
+                        <input class="form-control" type="text" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time.strftime("%H:%M") %>" />
+                        <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
+                      </div>
+                    <td width="200">
+                      <div class="input-group timepicker">
+                        <input class="form-control" type="text" name="ticket[<%= section.id %>][end_time]" value="<%= section.end_time.strftime("%H:%M") %>" />
+                        <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
+                      </div>
+                    </td>
+
+                    <td width="100" align="right">
+                      <a class="btn btn-sm btn-default btn-ticket-delete" href="#" onclick="return on_ticket_delete(this);"><i class="fa fa-minus"></i></a>
+                      <a class="btn btn-sm btn-default btn-ticket-add" href="#" onclick="return on_ticket_add(this);"><i class="fa fa-plus"></i></a>
+                    </td>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
             </div>
           </div>
-        </div>
+          <div class="form-footer">
+            <button class="btn btn-daydash btn-daydash-green-1">Submit</button>
+            or
+            <button class="btn btn-default">Save as Draft</button>
+          </div>
+        <% end %>
       </div>
-
-      <div class="form-section">
-        <div class="form-header">
-          <h1 class="form-title">2. Ticket Detail</h1>
-        </div>
-        <div class="form-body">
-          <table class="table table-hover ticket-list">
-            <thead>
-              <tr>
-                <td>Ticket Title</td>
-                <td>Ticket Available</td>
-                <td>Ticket Price</td>
-                <td>Date</td>
-                <td>From</td>
-                <td>To</td>
-                <td><!-- Action --></td>
-              </tr>
-            </thead>
-            <tbody>
-              <% @sections.each do |section| %>
-              <tr class="ticket" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
-                <td><input class="form-control" type="text" name="ticket[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
-                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][total]" value="<%= section.total %>" /></td>
-                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][price]" value="<%= section.price %>" /></td>
-                <td width="200">
-                  <div class="input-group datepicker">
-                    <input type="text" class="form-control" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time.strftime("%d/%m/%Y")  %>" />
-                    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                  </div>
-                </td>
-                <td width="200">
-                  <div class="input-group timepicker">
-                    <input class="form-control" type="text" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time.strftime("%H:%m") %>" />
-                    <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-                  </div>
-                <td width="200">
-                  <div class="input-group timepicker">
-                    <input class="form-control" type="text" name="ticket[<%= section.id %>][end_time]" value="<%= section.end_time.strftime("%H:%m") %>" />
-                    <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-                  </div>
-                </td>
-
-                <td width="100" align="right">
-                  <a class="btn btn-sm btn-default btn-ticket-delete" href="#" onclick="return on_ticket_delete(this);"><i class="fa fa-minus"></i></a>
-                  <a class="btn btn-sm btn-default btn-ticket-add" href="#" onclick="return on_ticket_add(this);"><i class="fa fa-plus"></i></a>
-                </td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="form-footer">
-        <button class="btn btn-daydash btn-daydash-green-1">Submit</button>
-        or
-        <button class="btn btn-default">Save as Draft</button>
-      </div>
-    <% end %>
+    </div>
   </div>
 </div>
 
