--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -1,36 +1,56 @@
-<div class="section">
-  <div class="container">
-    <%= render partial: "organizer/parts/organizer-nav" %>
-    <script>$('#organizer-nav #menu-event-list').addClass('active');</script>
+<script>$('body').attr('id', 'organizer-event-list');</script>
 
+<%= render partial: "organizer/parts/organizer-nav" %>
+<script>$('#organizer-nav #menu-event-list').addClass('active');</script>
+
+<div class="section" id="event-list-section">
+  
+  <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-9">
+      <div class="col-xs-12">
         <div class="event-list">
-          <div class="list-header">
-            <h1 class="list-title">Manage Events</h1>
-          </div>
           <div class="list-body">
             <% @events.each do |event| %>
-            <div class="event card-side-cover">
+            <div class="event card-side-cover event-for-organizer">
               <a class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :thumb) %>);" href="#"></a>
               <div class="info">
                 <div class="info-body">
                   <h4 class="title"><%= event.title %></h4>
-                  <div class="meta date"><%= event.sections.first %></div>
+                  <div class="meta date"><%= event.sections.first.event_time.strftime("%d %B %Y, %H:%M") %></div>
                   <div class="meta location"><%= event.location_name %></div>
                 </div>
                 <div class="info-footer">
                   <div class="row">
-                    <div class="col-xs-12">
-                      <ul class="list-inline list-action-nav pull-right">
+                    <div class="col-xs-12 col-md-4 pull-right">
+                      <div class="ticket-sold-panel">
+                        <div class="row">
+                          <div class="col-xs-7 ticket-sold-label">จำนวนบัตรขายไป</div>
+                          <div class="col-xs-5 ticket-sold-value">0 / 35</div>
+                        </div>
+                        <div class="row">
+                          <div class="col-xs-12">
+                            <div class="progress">
+                              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">60% Complete</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-12 col-md-8">
+                      <ul class="list-inline list-action-nav">
                         <li>
-                          <%= link_to "Transaction List", organizer_event_path(event) %>
+                          <a href="<%= orders_organizer_event_path(event) %>"><i class="icon icon-xs icon-order"></i> Orders</a>
                         </li>
                         <li>
-                          <%= link_to "Edit", edit_organizer_event_path(event), target: '_self' %>
+                          <a href="<%= checkin_organizer_event_path(event) %>"><i class="icon icon-xs icon-checkin"></i> Check in</a>
                         </li>
                         <li>
-                          <%= link_to "View Event", organizer_event_path(event) %>
+                          <a href="<%= edit_organizer_event_path(event) %>"><i class="icon icon-xs icon-edit"></i> Edit</a>
+                        </li>
+                        <li>
+                          <a href="<%= unpublish_organizer_event_path(event) %>"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
                         </li>
                       </ul>
                     </div>
