--- a/app/views/greetings/policy.html.erb
+++ b/app/views/greetings/policy.html.erb
@@ -3,6 +3,8 @@
     <div class="col-sm-12">
       <% unless mobile_device? %>
         <h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
+      <% else %>
+        <p>นโยบายความเป็นส่วนตัวของ Daydash</p>
       <% end %>
       <p>แอพพลิเคชั่น Daydash (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
 
