### Cleanup mailer tempalte
Why:

* clearing template first

This change addresses the need by:

* ...

--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -33,7 +33,7 @@
                           <div class="col-xs-6">
                             <div>
                               <span class="ticket-type"><%= ticket.section.title %></span>
-                              <span class="ticket-price">฿ <%= '%.2f' % ticket.to_price %></span>
+                              <span class="ticket-price">฿ <%= ticket.to_price %></span>
                             </div>
                           </div>
                           <div class="col-xs-6">
@@ -89,7 +89,7 @@
                           <div class="col-xs-6">
                             <div>
                               <span class="ticket-type"><%= ticket.section.title %></span>
-                              <span class="ticket-price">฿ <%= '%.2f' % ticket.to_price %></span>
+                              <span class="ticket-price">฿ <%= ticket.to_price %></span>
                             </div>
                           </div>
                           <div class="col-xs-6">
