--- a/app/views/layouts_mailer/user/ticket.html.erb
+++ b/app/views/layouts_mailer/user/ticket.html.erb
@@ -113,23 +113,20 @@
                                 <table width="100%" style="border-bottom: 1px solid #eee;"><tr><td></td></tr></table>
                               </td>
                             </tr>
-                            <tr>
-                              <td style="font-size: 14px; font-weight: 200; padding-bottom: 5px;">General Ticket</td>
-                              <td style="font-size: 14px; font-weight: 200;" align="right">฿500 x 1</td>
-                              <td style="font-size: 14px; font-weight: 200;" align="right">฿500</td>
-                            </tr>
-                            <tr>
-                              <td style="font-size: 14px; font-weight: 200; padding-bottom: 5px;">VIP Ticket</td>
-                              <td style="font-size: 14px; font-weight: 200;" align="right">฿800 x 1</td>
-                              <td style="font-size: 14px; font-weight: 200;" align="right">฿800</td>
-                            </tr>
+                            <% @order.tickets.each do |ticket| %>
+                              <tr>
+                                <td style="font-size: 14px; font-weight: 200; padding-bottom: 5px;"><%= ticket.section.title %></td>
+                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %> x 1</td>
+                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %></td>
+                              </tr>
+                            <% end %>
                             <tr>
                               <td colspan="3" style="padding: 10px 0px;">
                                 <table width="100%" style="border-bottom: 1px solid #eee;"><tr><td></td></tr></table>
                               </td>
                             </tr>
                             <tr>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="3" align="right">Total ฿1,300</td>
+                              <td style="font-size: 14px; font-weight: 200;" colspan="3" align="right">Total ฿<%= @order.to_price %></td>
                             </tr>
                             <tr>
                               <td colspan="3" style="padding: 10px 0px;">
@@ -137,8 +134,8 @@
                               </td>
                             </tr>
                             <tr>
-                              <td style="font-size: 14px; font-weight: 200;">ชำระเงินโดย: บัตรเครดิต</td>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #17A41D;">สำเร็จ</strong></td>
+                              <td style="font-size: 14px; font-weight: 200;">ชำระเงินโดย: <%= @payment.channel %></td>
+                              <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #17A41D;"><%= @payment.stages %></strong></td>
                             </tr>
                           </table>
                         </td>
@@ -182,6 +179,7 @@
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
                     <table class="ticket-list">
+                      <% @tickets.each do |ticket| %>
                       <tr class="ticket">
                         <td valign="top" id="templateColumns" style="border: 1px solid black; border-left: 10px solid black;">
                           <!--[if gte mso 9]>
@@ -206,10 +204,10 @@
                                             <tr>
                                               <td class="mcnTextContent" valign="top" style="padding:9px;">
                                                 <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET HOLDER</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">Bow K.</p>
+                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;"><%= "#{ticket.user.first_name} #{ticket.user.last_name}" %></p>
                                                 <br />
                                                 <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET ID</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">g2IvnYf4Uxt9</p>
+                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;"><%= ticket.code %></p>
                                               </td>
                                             </tr>
                                           </tbody>
@@ -242,10 +240,10 @@
                                             <tr>
                                               <td class="mcnTextContent" valign="top" style="padding:9px;">
                                                 <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">General Ticket</p>
+                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;"><%= ticket.section.title %></p>
                                                 <br />
                                                 <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET PRICE</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">฿500</p>
+                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">฿<%= ticket.to_price %></p>
                                               </td>
                                             </tr>
                                           </tbody>
@@ -299,123 +297,7 @@
                       <tr>
                         <td>&nbsp;</td>
                       </tr>
-                      <tr class="ticket">
-                        <td valign="top" id="templateColumns" style="border: 1px solid black; border-left: 10px solid black;">
-                          <!--[if gte mso 9]>
-                          <table align="center" border="0" cellspacing="0" cellpadding="0" width="600" style="width:600px;">
-                          <tr>
-                          <td align="center" valign="top" width="200" style="width:200px;">
-                          <![endif]-->
-                          <table align="left" border="0" cellpadding="0" cellspacing="0" width="190" class="columnWrapper">
-                            <tr>
-                              <td valign="top" class="columnContainer">
-                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-                                  <tbody class="mcnCaptionBlockOuter">
-                                    <tr>
-                                      <td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
-                                        <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="false">
-                                          <tbody>
-                                            <tr>
-                                              <td class="mcnCaptionBottomImageContent" align="center" valign="top" style="padding:0 9px 9px 9px;" colspan="2">
-                                                <table style="width: 140px;" class="mcpreview-image-uploader" data-mc-id="0"></table>
-                                              </td>
-                                            </tr>
-                                            <tr>
-                                              <td class="mcnTextContent" valign="top" style="padding:9px;">
-                                                <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET HOLDER</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">Bow K.</p>
-                                                <br />
-                                                <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET ID</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">g2IvnYf4Uxt9</p>
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </table>
-                          <!--[if gte mso 9]>
-                          </td>
-                          <td align="center" valign="top" width="200" style="width:200px;">
-                          <![endif]-->
-                          <table align="left" border="0" cellpadding="0" cellspacing="0" width="180" class="columnWrapper">
-                            <tr>
-                              <td valign="top" class="columnContainer">
-                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-                                  <tbody class="mcnCaptionBlockOuter">
-                                    <tr>
-                                      <td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
-                                        <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="false">
-                                          <tbody>
-                                            <tr>
-                                              <td class="mcnCaptionBottomImageContent" align="center" valign="top" style="padding:0 9px 9px 9px;" colspan="2">
-                                                <table style="width: 140px;" class="mcpreview-image-uploader" data-mc-id="0"></table>
-                                              </td>
-                                            </tr>
-                                            <tr>
-                                              <td class="mcnTextContent" valign="top" style="padding:9px;">
-                                                <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">General Ticket</p>
-                                                <br />
-                                                <label style="font-weight: 200; font-size: 14px; color: #999;">TICKET PRICE</label>
-                                                <p style="font-weight: 200; font-size: 14px; margin-top: 0px;">฿500</p>
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </table>
-                          <!--[if gte mso 9]>
-                          </td>
-                          <td align="center" valign="top" width="200" style="width:200px;">
-                          <![endif]-->
-                          <table align="left" border="0" cellpadding="0" cellspacing="0" width="180" class="columnWrapper">
-                            <tr>
-                              <td valign="top" class="columnContainer">
-                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-                                  <tbody class="mcnCaptionBlockOuter">
-                                    <tr>
-                                      <td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
-                                        <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="false">
-                                          <tbody>
-                                            <tr>
-                                              <td class="mcnCaptionBottomImageContent" align="center" valign="top" style="padding:0 9px 9px 9px;" colspan="2">
-                                                <table style="width: 140px;" class="mcpreview-image-uploader" data-mc-id="0"></table>
-                                              </td>
-                                            </tr>
-                                            <tr>
-                                              <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
-                                                <img src="/src/images/email/order/qr.png" width="100%" />
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </table>
-                          <!--[if gte mso 9]>
-                          </td>
-                          </tr>
-                          </table>
-                          <![endif]-->
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>&nbsp;</td>
-                      </tr>
+                      <% end %>
                     </table>
                     <p style="font-weight: 200; padding-bottom: 30px;">
                       คุณสามารถใช้อีเมลนี้เพื่อเป็นบัตรเข้างานได้ทันที่ หรือแจ้งชื่อของคุณพร้อมแสดงบัตรประชาชน กับเจ้าหน้าที่หน้างาน เพื่อเข้างานได้ทันทีค่ะ :)
@@ -425,7 +307,7 @@
                       <tr>
                         <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
                           หากคุณพบปัญหาหรือมีคำถาม ต้องการความช่วยเหลือ สามารถติดต่อเราได้ที่<br />
-                          Tel. 080-456-9465  หรือ Line: @daydash
+                          Tel. 080-456-9465  หรือ Line: <a href="https://line.me/ti/p/@daydash" target="_blank">@daydash</a>
                         </td>
                       </tr>
                     </table>
