--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -18,10 +18,10 @@
                 <tr>
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                     <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">
-                      Hi <%= "#{@user.first_name}" %>, we’ve got your order!
+                      <%= @title %>
                     </h1>
                     <h1 style="padding: 0px 5px; padding-bottom: 30px;">
-                      Just one more step :)
+                      <%= @subtitle %>
                     </h1>
                   </td>
                 </tr>
